--- a/package.json
+++ b/package.json
@@ -12,13 +12,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
-    "date-fns": "^4.1.0",
-    "firebase": "^12.8.0",
     "lucide-react": "^0.344.0",
-    "qrcode-generator": "^2.0.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.13.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
