--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@supabase/supabase-js": "^2.57.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+
+    "react-router-dom": "^6.22.3",
+    "firebase": "^10.12.2",
+    "qrcode-generator": "^1.4.4",
+    "date-fns": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
