--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "@zxing/library": "^0.21.3",
+    "date-fns": "^3.6.0",
+    "firebase": "^10.12.2",
     "lucide-react": "^0.344.0",
+    "qrcode-generator": "^1.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-
-    "react-router-dom": "^6.22.3",
-    "firebase": "^10.12.2",
-    "qrcode-generator": "^1.4.4",
-    "date-fns": "^3.6.0"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
