--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "lucide-react": "^0.344.0",
+    "qrcode": "^1.5.4",
     "qrcode-generator": "^1.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
